[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[features]
mock = []

[dependencies]
util = {path = "../util"}
infra = {path = "../infra"}
infra_handler = {path = "../infra_handler"}
mockall = {version = "0.13.1"}
mockall_double = {version = "0.3.1"}
anyhow = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
imageproc = "0.25.0"
log = {workspace = true}

[dev-dependencies]
fake = "3.0.1"
infra = {path = "../infra", features = ["mock"]}
