[package]
name = "repository_handler"
version = "0.1.0"
edition = "2024"

[features]
mock = []

[dependencies]
util = {path = "../util"}
repository = {path = "../repository"}
infra_handler = {path = "../infra_handler"}

[dev-dependencies]
repository = {path = "../repository", features = ["mock"]}
infra_handler = {path = "../infra_handler", features = ["mock"]}
